--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav class="navbar-default"> 
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-band" href="#">Money</a>
+        <a class="navbar-band" href="#">big Boss</a>
       </div> 
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
