--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>PROFILE</title>
 </head>
@@ -23,8 +24,7 @@
       </div>
       </nav>
       <div class="container">
-       <h3>W</h3>
+       <h3>Welcome to my page</h3>
        <h3> Hey sexy <h3>
-        <p> A navigation bar is a navigation that is placed at the top of the page.</head></p>
 </body>
 </html>
